# ray-shooter

./: .gitignore  CMakeLists.txt  README.md  linux-build.sh  storage.data  windows-mingw-build.sh
src/: Globals.hpp  Node.cpp  Node.hpp  main.cpp
src/context/: GlobalContext.cpp  GlobalContext.hpp  GlobalState.cpp  GlobalState.hpp
src/entities/: Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp
src/screens/: GameOver.cpp  GameOver.hpp  GameScreen.cpp  GameScreen.hpp  StartScreen.cpp  StartScreen.hpp
